--- a/scss/components/_mop-list.scss
+++ b/scss/components/_mop-list.scss
@@ -1,9 +1,18 @@
 .mop-List_Items {
   @include grid;
-  @include grid-template-columns(repeat(2, 1fr));
-  @include grid-gap-column-row(25px, 40px);
+  @include grid-gap(30px);
+
+  @include breakpoint('custom-350') {
+    @include grid-template-columns(repeat(2, 1fr));
+    @include grid-gap(20px);
+  }
+
+  @include breakpoint('custom-600') {
+    @include grid-gap-column-row(25px, 40px);
+  }
 
   @include breakpoint('sm') {
     @include grid-template-columns(repeat(3, 1fr));
+    @include grid-gap-column-row(25px, 40px);
   }
 }
